hphp/test/slow/parser/hh-reserved-name-parent-2.php.expectf
Fatal error: Cannot use 'Parent' as class name as it is reserved in %s on line 4
